--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         
         
         <div class="footer-column">
-        <h3 class="section-title">Let’s Message me</h3>
+        <h3 class="section-title">Let’s Message me,Right Now.</h3>
        <div> <from class="contact" action="">
             <input type="text" placeholder="Your Name">
             <input type="text" placeholder="Your Email">
